--- a/src/apps/ecidadania/proposals/templates/proposals/proposalset_add.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposalset_add.html
@@ -23,7 +23,7 @@
 
     <div class="row">
         <div class="span12">
-            <h4>{% trans "Add new Proposal Set" %}</h4>
+            <h4>{% trans "Add new proposal set" %}</h4>
         </div>
     </div>
     <div class="row">
