Added new template and updated the documentation

--- a/docs/_templates/bootstrap/static/bootstrap-sphinx.css
+++ b/docs/_templates/bootstrap/static/bootstrap-sphinx.css
@@ -13,3 +13,28 @@ body {
   color: #FFF;
   text-shadow: #777 2px 2px 3px;  
 }
+
+.admonition {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: 1px solid #000000;
+}
+
+div.admonition {
+    padding: 15px;
+}
+
+.warning {
+    color: #B94A48;
+    background-color: #F2DEDE;
+    border-color: #EED3D7;
+    padding: 25px;
+}
+
+.note {
+    color: #C09853;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    background-color: #FCF8E3;
+    border-color: #FBEED5;
+}
