--- a/src/apps/ecidadania/debate/templates/debate/debate_view.html
+++ b/src/apps/ecidadania/debate/templates/debate/debate_view.html
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="span6">
             <p><strong>{% trans "Description:" %}</strong> {{ debate.description }}</p>
-            <p><strong>{% trans "Scope:" %}</strong> {{ debate.scope }}</p>
+            <p><strong>{% trans "Theme:" %}</strong> {{ debate.theme}}</p>
         </div>
         <div class="span6">
             <p><strong>{% trans "Start date:" %}</strong> {% if debate.start_date %}{{ debate.start_date }}{% else %}{% trans "No date"%}{% endif %}</p>
