proposalset template edited

--- a/src/apps/ecidadania/proposals/templates/proposals/proposalset_confirm_delete.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposalset_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "Delete proposal" %}{% endblock %}
+{% block title %}{% trans "Delete Proposal Set" %}{% endblock %}
 {% block logo %}
     {% if get_place %}
         <a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>
