--- a/src/apps/ecidadania/debate/templates/debate/debate_view.html
+++ b/src/apps/ecidadania/debate/templates/debate/debate_view.html
@@ -2,13 +2,16 @@
 {% load i18n %}
 {% load wysiwyg %}
 
-{% block title %}{% trans "View debate" %} {{ debate.title }}{% endblock %}
-{% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
+{% with debate.title as debate_title %}
+{% with get_place.get_absolute_url as place_url %}
+{% block title %}{% trans "View debate" %} {{ debate_title }}{% endblock %}
+{% block logo %}<a href="{{ place_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
 {% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
 
 {% block space %}
-    <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+    <a class="brand" href="{{ place_url }}">{{ get_place.name }}</a>
 {% endblock %}
+{% endwith %}
 
 {% block content %}
 
@@ -17,19 +20,24 @@
             <h4>{{ debate.title}}</h4>
         </div>
     </div>
-    
+
     <div class="row">
         <div class="span6">
             <p><strong>{% trans "Description:" %}</strong> {{ debate.description }}</p>
             <p><strong>{% trans "Theme:" %}</strong> {{ debate.theme}}</p>
         </div>
         <div class="span6">
-            <p><strong>{% trans "Start date:" %}</strong> {% if debate.start_date %}{{ debate.start_date }}{% else %}{% trans "No date"%}{% endif %}</p>
-            <p><strong>{% trans "End date:" %}</strong> {% if debate.end_date %}{{ debate.end_date }}{% else %}{% trans "No date"%}{% endif %}</p>
+						{% with debate.start_date as start_date %}
+						{% with debate.end_date as end_date %}
+            <p><strong>{% trans "Start date:" %}</strong> {% if start_date %}{{ start_date }}{% else %}{% trans "No date"%}{% endif %}</p>
+            <p><strong>{% trans "End date:" %}</strong> {% if end_date %}{{ end_date }}{% else %}{% trans "No date"%}{% endif %}</p>
+						{% endwith %}
+						{% endwith %}
         </div>
     </div>
 
 {% endblock %}
+{% endwith %}
 
 {% block freewidth %}
 
@@ -37,12 +45,13 @@
         <div class="span12 specialmargin">
             <div id="debate-number" class="hidden">{{ debate.pk }}</div>
             <div id="last-note" class="hidden">{{ lastnote }}</div>
-            
+
             <div id="debate">
-                
-                <table id="debate{{ debate.pk }}" cellspacing="0" style="width:100%;" align="left">
+							{% with debate.pk as debate_pk %}
+                <table id="debate{{ debate_pk }}" cellspacing="0" style="width:100%;" align="left">
                     <thead>
-                        <tr id="debate{{ debate.pk }}-headers">
+                        <tr id="debate{{ debate_pk }}-headers">
+														{% endwith %}
                             <th id="corner" class="corner-criteria"></th>
                             {% for col in columns %}
                                 <th id="col-{{ col.id }}">{{ col.criteria }}</th>
@@ -56,11 +65,13 @@
                                     The th style width is meant to make smaller the th, since most browsers make
                                     the th fill all the space.
                                 {% endcomment %}
-                                <th id="row-{{ row.id }}" width="1%"><div class="debate-ttitle">{{ row.criteria }}</div></th>
+																{% with row.id as row_id %}
+                                <th id="row-{{ row_id }}" width="1%"><div class="debate-ttitle">{{ row.criteria }}</div></th>
                                 {% for td in columns %}
-                                    <td headers="{{ td.id }}-{{ row.id }}" id="sortable-debate" class="connectedSortable">
+                                		{% with td.id as td_id %}
+                                    <td headers="{{ td_id }}-{{ row_id }}" id="sortable-debate" class="connectedSortable">
                                         {% for note in notes %}
-                                            {% if note.column.id == td.id and note.row.id == row.id %}
+                                            {% if note.column.id == td_id and note.row_id == row_id %}
                                                 <div id="{{ note.id }}" class="note {% if note.author == request.user %}mine{% endif %}">
                                                     <div class="handler">
                                                         {% if note.author == request.user and perms.note.delete_note or request.user.is_staff %}
@@ -75,13 +86,15 @@
                                                 </div>
                                             {% endif %}
                                         {% endfor %}
+																				{% endwith %}
                                     </td>
                                 {% endfor %}
+																{% endwith %}
                             </tr>
                         {% endfor %}
                     </tbody>
                 </table>
-                
+
                 <br />
 
                 <div id="edit-current-note" class="modal hide fade" style="display: none; ">
@@ -130,9 +143,9 @@
 
                 <span class="btn btn-primary btn-small" id="new-note" onclick="createNote()">{% trans "Add new note" %}</span>
                 <div id="sortable-dispatcher"></div>
-                
+
             </div>
-            
+
         </div>
     </div>
 
