--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -865,7 +865,7 @@ div#table-container td.totals_header {
 }
 
 #list_formats {
-    float: left;
+    float: right;
     margin-bottom: 10px;
     margin-right: 10px;
 }
@@ -909,6 +909,7 @@ div.dataTables_processing {
 div.dataTables_info  {
 	width: auto;
     float: right;
+    clear: none;
     margin: 2px 0 4px 10px;
 }
 div.dataTables_length {
@@ -1279,7 +1280,8 @@ div#last_update {
 
 /* Used to diplay the list-add with the list-add-btn */
 #list-btn-add {
-	margin-bottom: 10px
+	margin-bottom: 10px;
+	float: left;
 }
 #list-add {
     display: none
