--- a/views/formats.html
+++ b/views/formats.html
@@ -1,5 +1,6 @@
 {{if not response.s3.no_formats:}}
 <div id='list_formats'>
+Export to:
 <a href="{{=response.s3.formats.pdf or r.url(representation="pdf")}}" title="{{=T("Export in PDF format")}}"><img src="/{{=request.application}}/static/img/pdficon_small.gif"/></a>
 <a href="{{=response.s3.formats.xls or r.url(representation="xls")}}" title="{{=T("Export in XLS format")}}"><img src="/{{=request.application}}/static/img/icon-xls.png"/></a>
 <a href="{{=response.s3.formats.rss or r.url(representation="rss")}}" title="{{=T("Export in RSS format")}}"><img src="/{{=request.application}}/static/img/RSS_16.png"/></a>
