Tweaks to templates to allow compilation of views (also needs web2py patch)

--- a/views/layout.html
+++ b/views/layout.html
@@ -1,2 +1,2 @@
-{{extend "../private/templates/%s/views/layout.html" % settings.get_theme()}}
+{{extend "../private/templates/%s/views/layout.html" % response.s3.theme}}
 {{include}}
