--- a/views/style.html
+++ b/views/style.html
@@ -1,1 +1,1 @@
-{{extend "../private/templates/%s/views/style.html" % settings.get_theme()}}
+{{extend "../private/templates/%s/views/style.html" % response.s3.theme}}
