--- a/private/templates/default/views/layout.html
+++ b/private/templates/default/views/layout.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>{{try:}}{{=title}}{{except:}}{{=response.title or deployment_settings.get_system_name_short()}}{{pass}}</title>
+<title>{{try:}}{{=title}}{{except:}}{{=response.title or settings.get_system_name_short()}}{{pass}}</title>
 {{if response.refresh:}}{{=XML(response.refresh)}}{{pass}}
 <!-- http://dev.w3.org/html5/markup/meta.name.html -->
 <meta name="application-name" content="{{=request.application}}" />
@@ -24,7 +24,7 @@
 <!-- This kills the map in IE8: VML.js -->
 <!--<script src="/{{=request.application}}/static/scripts/web2py/modernizr-1.7.min.js"></script>-->
 <style type="text/css">
-{{if response.s3.rtl:}}
+{{if s3.rtl:}}
   div { direction: rtl; }
 {{else:}}
   body { direction: ltr; }
@@ -36,25 +36,25 @@
   {{include "s3_include_min.html"}}
   {{include "style.html"}}
 {{pass}}
-{{for sheet in response.s3.external_stylesheets:}}
+{{for sheet in s3.external_stylesheets:}}
   <link href="{{=sheet}}" rel="stylesheet" type="text/css" media="screen" charset="utf-8" />
 {{pass}}
-{{for sheet in response.s3.stylesheets:}}
+{{for sheet in s3.stylesheets:}}
   <link href="/{{=request.application}}/static/styles/{{=sheet}}" rel="stylesheet" type="text/css" media="screen" charset="utf-8" />
 {{pass}}
-<script src="/{{=request.application}}/static/scripts/ext/src/locale/ext-lang-{{=response.s3.language}}.js" type="text/javascript"></script>
+<script src="/{{=request.application}}/static/scripts/ext/src/locale/ext-lang-{{=s3.language}}.js" type="text/javascript"></script>
 <!--Scripts which need pre-processing by server must be called in-line-->
 <script type="text/javascript">//<![CDATA[
   // Translation Strings
   {{include "l10n.js"}}
   // Global variables
   S3.Ap = '/{{=request.application}}';
-{{if response.s3.rtl:}}
+{{if s3.rtl:}}
   S3.rtl = true;
 {{else:}}
   S3.rtl = false;
 {{pass}}
-{{if response.s3.interactive:}}
+{{if s3.interactive:}}
   S3.interactive = true;
 {{else:}}
   S3.interactive = false;
@@ -115,22 +115,22 @@
     <div id='footer'>
         {{include "footer.html"}}
       {{if session.s3.debug:}}
-        {{=response.s3.toolbar()}}
+        {{=s3.toolbar()}}
       {{pass}}
     </div>
 {{pass}}
 {{if response.google_analytics_id:}}<script>/* http://mathiasbynens.be/notes/async-analytics-snippet */ var _gaq=[['_setAccount','{{=response.google_analytics_id}}'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script')) </script>{{pass}}
 <!-- Include dynamically added Scripts -->
-{{for script in response.s3.scripts:}}
+{{for script in s3.scripts:}}
     {{=SCRIPT(_src = script)}}
 {{pass}}
     <script type="text/javascript">//<![CDATA[
-  {{for script in response.s3.js_global:}}
+  {{for script in s3.js_global:}}
     {{=XML(script)}}
   {{pass}}
-  {{if response.s3.jquery_ready:}}
+  {{if s3.jquery_ready:}}
     $(document).ready(function() {
-      {{for script in response.s3.jquery_ready:}}
+      {{for script in s3.jquery_ready:}}
         {{=XML(script)}}
       {{pass}}
     });
