Fix access to ticket viewer, Fix CSS alignment in Report Filter

--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -718,6 +718,7 @@ div.form-container form legend {
     font-weight: bold;
     color: #666;
 }
+/*
 div.form-container form fieldset div.brake {
     padding: 0.3em;
 }
@@ -752,6 +753,7 @@ div.form-container form fieldset textarea:focus {
     background-color: #ffffcc;
     border-color: #fc6;
 }
+*/
 div.form-container form input:focus,
 div.form-container form select:focus,
 div.form-container form input.errorfield:focus,
