--- a/views/admin/setting.html
+++ b/views/admin/setting.html
@@ -4,7 +4,7 @@
 <h2>{{=T("Settings")}}</h2>
 <p>{{=T("Settings which can be configured through the web interface are available here.")}}</p>
 <p>{{=T("Other settings can only be set by editing a file on the server")}}:<i>models/000_config.py</i></p>
-{{if deployment_settings.has_module("msg"):}}
+{{if settings.has_module("msg"):}}
 <h3>{{=T("Messaging")}}:</h3>
 <ul>
   <li><a href='{{=URL(c="msg", f="email_settings", args=[1, "update"])}}'>{{=T("Email")}}</a>
