S3OrgHierarchyWidget: fixed styles; created search widget; changed office search to use widget; match widget to field value on load; fixed passing of attributes.

--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -1797,6 +1797,9 @@ a:visited:after {
 .widget-org-hierarchy-crumbs li:after {
     content: " > ";
 }
+.widget-org-hierarchy-crumbs li a {
+    text-decoration: none;
+}
 .widget-org-hierarchy-crumbs li.selected a {
     text-decoration: none;
     border-bottom: 1px dashed black;
